--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,12 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
+    "paths": {
+      "navbar": [
+        "dist/navbar/navbar",
+        "dist/navbar"
+      ]
+    },
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
