--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "@lowgular/shared": "^0.0.7",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "firebase": "^9.6.10",
     "ngx-bootstrap": "^8.0.0",
     "rxjs": "~7.5.0",
